force-app/main/default/objects/POQ_Item__c/POQ_Item__c.object-meta.xml
<CustomObject>
    <label>POQ Item</label>
    <nameField>
        <label>Product Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POQ Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>