force-app/main/default/objects/POQ_Item__c/fields/AddressRefId__c.field-meta.xml
<CustomField>
    <fullName>AddressRefId__c</fullName>
    <label>AddressRefId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>