force-app/main/default/objects/POQ_Item__c/fields/lineConnectionStatus__c.field-meta.xml
<CustomField>
    <fullName>lineConnectionStatus__c</fullName>
    <label>lineConnectionStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>