force-app/main/default/objects/POQ_Item__c/fields/lineProvider__c.field-meta.xml
<CustomField>
    <fullName>lineProvider__c</fullName>
    <label>lineProvider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>