force-app/main/default/objects/POQ_Item__c/fields/Location_Line__c.field-meta.xml
<CustomField>
    <fullName>Location_Line__c</fullName>
    <label>Location Line</label>
    <referenceTo>Location_Line__c</referenceTo>
    <relationshipLabel>POQ Items</relationshipLabel>
    <relationshipName>POQ_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>