force-app/main/default/objects/POQ_Item__c/fields/NETWORK_PROVIDER_NOT_SUPPORTED__c.field-meta.xml
<CustomField>
    <fullName>NETWORK_PROVIDER_NOT_SUPPORTED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NETWORK_PROVIDER_NOT_SUPPORTED</label>
    <type>Checkbox</type>
</CustomField>