force-app/main/default/objects/POQ_Item__c/fields/NEW_ROUTER_NEEDED__c.field-meta.xml
<CustomField>
    <fullName>NEW_ROUTER_NEEDED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NEW_ROUTER_NEEDED</label>
    <type>Checkbox</type>
</CustomField>