force-app/main/default/objects/POQ_Item__c/fields/NOT_SALEABLE__c.field-meta.xml
<CustomField>
    <fullName>NOT_SALEABLE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOT_SALEABLE</label>
    <type>Checkbox</type>
</CustomField>