force-app/main/default/objects/POQ_Item__c/fields/plugPresentPositiveValidation__c.field-meta.xml
<CustomField>
    <fullName>plugPresentPositiveValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value received from POQ to be transferred to the Order API</description>
    <label>plugPresentPositiveValidation</label>
    <type>Checkbox</type>
</CustomField>