force-app/main/default/objects/POQ_Item__c/fields/plugTechnicianRequired__c.field-meta.xml
<CustomField>
    <fullName>plugTechnicianRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>plugTechnicianRequired</label>
    <type>Checkbox</type>
</CustomField>