force-app/main/default/objects/POQ_Item__c/fields/priceplanCode__c.field-meta.xml
<CustomField>
    <fullName>priceplanCode__c</fullName>
    <label>priceplanCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>