force-app/main/default/objects/POQ_Item__c/fields/ProductOfferingId__c.field-meta.xml
<CustomField>
    <fullName>ProductOfferingId__c</fullName>
    <label>ProductOfferingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>