force-app/main/default/objects/POQ_Item__c/fields/ProductOfferingQualificationItemId__c.field-meta.xml
<CustomField>
    <fullName>ProductOfferingQualificationItemId__c</fullName>
    <label>ProductOfferingQualificationItemId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>