force-app/main/default/objects/POQ_Item__c/fields/Pseudo_Product__c.field-meta.xml
<CustomField>
    <fullName>Pseudo_Product__c</fullName>
    <label>Pseudo Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>