force-app/main/default/objects/POQ_Item__c/fields/Pseudo_Product_DA__c.field-meta.xml
<CustomField>
    <fullName>Pseudo_Product_DA__c</fullName>
    <label>Pseudo Product DA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>