force-app/main/default/objects/POQ_Item__c/fields/SiteId__c.field-meta.xml
<CustomField>
    <fullName>SiteId__c</fullName>
    <description>Added September 2023 (Fibia)</description>
    <label>SiteId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>