force-app/main/default/objects/POQ_Item__c/fields/VendorProductCatalogId__c.field-meta.xml
<CustomField>
    <fullName>VendorProductCatalogId__c</fullName>
    <description>Used for the catalogId from NetworkProviderProductCatalogIdNote in POQ response</description>
    <label>VendorProductCatalogId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>